only show busy indicators, and animate, if plasma actually as an animator plugin. this is due to the fact that the animator plugin ships in kdebase-workspace rather than kdebase-runtime, which screws things up. it won't be fixed in kdebase itself as the whole plasma animator API was rewritten in 4.4 and the old API is deprecated now.

BUG: 208102